<resources>
    <string name="app_name">PubNub aMessage</string>
    <string name="action_settings">Settings</string>

    <string name="cipher">Cipher</string>
    <string name="cipher_hint">Create a Cipher</string>

    <string name="authkey">Auth Key</string>
    <string name="authkey_hint">Create an Auth Key</string>


    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
</resources>
