<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="me.kevingleason.amessagetutorial.MainActivity"
    tools:showIn="@layout/activity_main"
    android:orientation="vertical">

    <TextView
        android:id="@+id/phoneNumberTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:text="55555555555"/>

    <LinearLayout
        android:paddingBottom="25dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_gray"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/cipher" />

        <ViewSwitcher
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/cipher_switcher"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/tv_cipher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:padding="10dp"
                android:background="@color/white"
                android:text="@string/cipher_hint"/>

            <EditText
                android:id="@+id/edit_cipher"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="10dp"
                android:background="@color/white"
                android:hint="@string/cipher_hint" />

        </ViewSwitcher>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/authkey" />

        <ViewSwitcher
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/authkey_switcher"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/tv_authkey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20sp"
                android:padding="10dp"
                android:background="@color/white"
                android:text="@string/authkey_hint"/>

            <EditText
                android:id="@+id/edit_authkey"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:padding="10dp"
                android:background="@color/white"
                android:hint="@string/authkey_hint" />

        </ViewSwitcher>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/enabled_switch"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:padding="25dp"
        android:gravity="center"
        android:background="@color/red_disabled">
        <ImageView
            android:src="@android:drawable/ic_media_rew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/tv_enabled"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:onClick="toggleEnabled"
            android:textColor="@color/white"
            android:text="@string/disabled" />
        <ImageView
            android:src="@android:drawable/ic_media_ff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
